# lattice-clients

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: apple-release.yml  ci.yml  windows-release.yml
docs/: m2-testing.md  toolchain-setup.md
flutter/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/src/: app.dart  services.dart  theme.dart
flutter/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
flutter/lib/src/screens/: dashboard_screen.dart  onboarding.dart  scan_screen.dart
flutter/lib/src/state/: app_controller.dart  dashboard_controller.dart
flutter/lib/src/widgets/: lattice_mesh.dart  ui.dart
flutter/linux/: CMakeLists.txt
flutter/linux/flutter/: generated_plugins.cmake
flutter/linux/runner/: my_application.cc
flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/rust/: Cargo.toml
flutter/rust/lattice-mobile/: Cargo.toml
flutter/rust/lattice-mobile/src/: lib.rs
flutter/rust/src/: frb_generated.rs
flutter/rust/src/api/: node.rs
flutter/rust_builder/: pubspec.yaml
flutter/rust_builder/android/: build.gradle  settings.gradle
flutter/rust_builder/ios/: lattice_bridge.podspec
flutter/rust_builder/linux/: CMakeLists.txt
flutter/rust_builder/macos/: lattice_bridge.podspec
flutter/rust_builder/windows/: CMakeLists.txt
flutter/test/: theme_test.dart  widget_test.dart
flutter/windows/: CMakeLists.txt
flutter/windows/flutter/: generated_plugins.cmake
flutter/windows/runner/: Runner.rc  main.cpp
(+8 files in other folders)
